<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".EmotionDiary">


    <ImageButton
        android:id="@+id/mood2"
        android:layout_width="91dp"
        android:layout_height="98dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="313dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_GetTheDay"
        app:srcCompat="@mipmap/mad_foreground" />

    <ImageButton
        android:id="@+id/mood3"
        android:layout_width="96dp"
        android:layout_height="98dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="313dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_GetTheDay"
        app:srcCompat="@mipmap/sad_foreground" />

    <ImageButton
        android:id="@+id/mood4"
        android:layout_width="91dp"
        android:layout_height="98dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="3dp"
        android:background="#002D2F31"
        android:contentDescription="@string/todo3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mood3"
        app:layout_constraintTop_toBottomOf="@+id/button_GetTheDay"
        app:srcCompat="@mipmap/nomood1_foreground" />

    <Button
        android:id="@+id/button_GetTheDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="41dp"
        android:background="@drawable/button_rounde"
        android:text="@string/button_GetTheDay"
        app:layout_constraintEnd_toStartOf="@+id/button_Today"
        app:layout_constraintStart_toEndOf="@+id/button_CancelTarget"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />


    <com.applandeo.materialcalendarview.CalendarView
        android:id="@+id/calendarView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:eventsEnabled="true"
        app:headerColor="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:selectionColor="#FF9800"
        app:selectionLabelColor="#FAFFFFFF"
        app:todayLabelColor="#FF9800"
        app:type="one_day_picker" />

    <Button
        android:id="@+id/button_CancelTarget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/button_rounde"
        android:text="@string/button_CancelTarget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_GetTheDay" />

    <Button
        android:id="@+id/button_Today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_rounde"
        android:text="@string/button_Today"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_GetTheDay" />

    <ImageButton
        android:id="@+id/mood1"
        android:layout_width="82dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="313dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_GetTheDay"
        app:srcCompat="@mipmap/mood1_foreground" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="70dp"
        android:text="開心"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mood1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:text="憤怒"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mood2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="245dp"
        android:text="悲傷"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mood2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="340dp"
        android:text="平淡"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mood2" />


</androidx.constraintlayout.widget.ConstraintLayout>